<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Contacts</string>
	<string name="action_settings">Settings</string>
	
	
	<string name="permission_dialog_title">Title!</string>
	<string name="permission_dialog_message">Хочу читать твои контакты!!!</string>
	
	<string name="permission_dialog_button_ok">OK</string>
	<string name="permission_dialog_button_cancel">Cancel</string>
	
	<string name="progress_dialog_text">Message!!!</string>
	
	<string name="contacts_list_item_image_description">photo</string>
	<string name="contacts_list_item_name_default">Name</string>
	<string name="contacts_list_item_email_dafault">No e-mail!</string>
	
	<string name="no_email_format">%s has no e-mail.</string>
	
	<string name="no_contacts_image_description">No contacts</string>
	<string name="no_contacts_text">No contacts!</string>
	
	<string name="email_letter_subject_template">Hi, %s!</string>
	<string name="email_letter_text_template">Sent from new Contacts App to your e-mail (%s).</string>
	
	<string name="composit_first_element_background">background</string>
	<string name="composit_first_element_title">Title</string>
	<string name="composit_first_element_am">AM</string>
	<string name="composit_first_element_noon">NOON</string>
	<string name="composit_first_element_pm">PM</string>
	<string name="composit_first_element_max">MAX</string>
	<string name="composit_first_element_med">MED</string>
	<string name="composit_first_element_min">MIN</string>
	
	<string name="composit_small_element_icon">icon</string>
	<string name="composit_small_element_title">Resting heart rate</string>
	<string name="composit_small_element_numeric_value">68</string>
	<string name="composit_small_element_unit">bpm</string>
	
	<string name="composit_large_element_icon">icon</string>
	<string name="composit_large_element_title">Exercise zones</string>
	<string name="composit_large_element_first_numeric_value">40</string>
	<string name="composit_large_element_first_unit">minutes</string>
	<string name="composit_large_element_second_numeric_value">226</string>
	<string name="composit_large_element_second_unit">calories</string>
	
	<string name="composit_large_element_secondary_data_first_value">0 min</string>
	<string name="composit_large_element_secondary_data_first_info">Peak</string>
	<string name="composit_large_element_secondary_data_second_value">1 min</string>
	<string name="composit_large_element_secondary_data_second_info">Cardio</string>
	<string name="composit_large_element_secondary_data_third_value">39 min</string>
	<string name="composit_large_element_secondary_data_third_info">Fat burn</string>
	
</resources>
