<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/yellow_light"
	android:padding="4pt" >

	<LinearLayout
		android:id="@+id/composit_large_element_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="4dp"
		android:layout_marginTop="4dp"
		android:baselineAligned="false"
		android:orientation="horizontal"
		tools:ignore="UseCompoundDrawables" >

		<ImageView
			android:id="@+id/composit_large_element_title_icon"
			android:layout_width="14sp"
			android:layout_height="14sp"
			android:contentDescription="@string/composit_large_element_icon"
			android:src="@drawable/ic_launcher" />

		<TextView
			android:id="@+id/composit_large_element_title_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/composit_large_element_title"
			android:textSize="14sp"
			android:textStyle="bold" />
	</LinearLayout>

	
	<LinearLayout
		android:id="@+id/composit_large_element_main_data"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/composit_large_element_title"
		android:baselineAligned="false"
		android:orientation="horizontal" >

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="horizontal" >

			<TextView
				android:id="@+id/composit_large_element_first_numeric_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/composit_large_element_first_numeric_value"
				android:textSize="30sp" />

			<TextView
				android:id="@+id/composit_large_element_first_unit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4sp"
				android:text="@string/composit_large_element_first_unit"
				android:textSize="14sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			
			android:orientation="horizontal" >

			<TextView
				android:id="@+id/composit_large_element_second_numeric_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/composit_large_element_second_numeric_value"
				android:textSize="30sp" />

			<TextView
				android:id="@+id/composit_large_element_second_unit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4sp"
				android:text="@string/composit_large_element_second_unit"
				android:textSize="14sp" />
		</LinearLayout>
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/composit_large_element_secondary_data"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/composit_large_element_main_data"
		android:baselineAligned="false"
		android:background="@color/white"
		android:orientation="vertical" >

		<LinearLayout
			android:id="@+id/composit_large_element_secondary_data_first"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:orientation="horizontal" >

			<ProgressBar
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_marginRight="10dp"
				android:max="40"
				android:progress="0" />

			<TextView
				android:id="@+id/composit_large_element_secondary_data_first_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/composit_large_element_secondary_data_first_value"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/composit_large_element_secondary_data_first_info"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4sp"
				android:text="@string/composit_large_element_secondary_data_first_info"
				android:textColor="@color/gray_text"
				android:textSize="14sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:orientation="horizontal" >

			<ProgressBar
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="10dp"
				android:max="40"
				android:progress="1" />

			<TextView
				android:id="@+id/composit_large_element_secondary_data_second_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/composit_large_element_secondary_data_second_value"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/composit_large_element_secondary_data_second_info"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4sp"
				android:text="@string/composit_large_element_secondary_data_second_info"
				android:textColor="@color/gray_text"
				android:textSize="14sp" />
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:orientation="horizontal" >

			<ProgressBar
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="10dp"
				android:max="40"
				android:progress="39" />

			<TextView
				android:id="@+id/composit_large_element_secondary_data_third_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/composit_large_element_secondary_data_third_value"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/composit_large_element_secondary_data_third_info"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4sp"
				android:text="@string/composit_large_element_secondary_data_third_info"
				android:textColor="@color/gray_text"
				android:textSize="14sp" />
		</LinearLayout>
	</LinearLayout>

</RelativeLayout>