<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/yellow_light"
	android:padding="4pt" >

	<LinearLayout
		android:id="@+id/composit_small_element_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="4dp"
		android:layout_marginTop="4dp"
		android:baselineAligned="false"
		android:orientation="horizontal"
		tools:ignore="UseCompoundDrawables" >

		<ImageView
			android:id="@+id/composit_small_element_title_icon"
			android:layout_width="14sp"
			android:layout_height="14sp"
			android:contentDescription="@string/composit_small_element_icon"
			android:src="@drawable/ic_launcher" />

		<TextView
			android:id="@+id/composit_small_element_title_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/composit_small_element_title"
			android:textSize="14sp"
			android:textStyle="bold" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/composit_small_element_title"
		android:orientation="horizontal" >

		<TextView
			android:id="@+id/composit_small_element_numeric_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/composit_small_element_numeric_value"
			android:textSize="30sp" />

		<TextView
			android:id="@+id/composit_small_element_unit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="4sp"
			android:text="@string/composit_small_element_unit"
			android:textSize="14sp" />
	</LinearLayout>

</RelativeLayout>